parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    ID

Grammar

Rule 0     S' -> init
Rule 1     init -> list_commands
Rule 2     list_commands -> list_commands commands
Rule 3     list_commands -> commands
Rule 4     commands -> command_execute
Rule 5     commands -> command_mkdisk
Rule 6     commands -> command_rmdisk
Rule 7     commands -> command_fdisk
Rule 8     commands -> command_mount
Rule 9     commands -> command_unmount
Rule 10    commands -> command_mkfs
Rule 11    commands -> command_login
Rule 12    commands -> command_logout
Rule 13    commands -> command_mkgrp
Rule 14    commands -> command_rmgrp
Rule 15    commands -> command_mkusr
Rule 16    commands -> command_rmusr
Rule 17    commands -> command_mkfile
Rule 18    commands -> command_cat
Rule 19    command_execute -> EXECUTE GUION PATH IGUAL CADENA
Rule 20    command_mkdisk -> MKDISK parameters_mkdisk
Rule 21    parameters_mkdisk -> parameters_mkdisk parameter_mkdisk
Rule 22    parameters_mkdisk -> parameter_mkdisk
Rule 23    parameter_mkdisk -> param_size
Rule 24    parameter_mkdisk -> param_path
Rule 25    parameter_mkdisk -> param_unit
Rule 26    parameter_mkdisk -> param_fit
Rule 27    param_size -> GUION SIZE IGUAL ENTERO
Rule 28    param_path -> GUION PATH IGUAL CADENA
Rule 29    param_unit -> GUION UNIT IGUAL UNIDAD_CADENA
Rule 30    param_fit -> GUION FIT IGUAL FIT_CADENA
Rule 31    command_fdisk -> FDISK parameters_fdisk
Rule 32    parameters_fdisk -> parameters_fdisk parameter_fdisk
Rule 33    parameters_fdisk -> parameter_fdisk
Rule 34    parameter_fdisk -> param_size
Rule 35    parameter_fdisk -> param_path
Rule 36    parameter_fdisk -> param_unit
Rule 37    parameter_fdisk -> param_fit
Rule 38    parameter_fdisk -> param_type
Rule 39    parameter_fdisk -> param_delete
Rule 40    parameter_fdisk -> param_name
Rule 41    parameter_fdisk -> param_add
Rule 42    param_type -> GUION TYPE IGUAL TYPE_CADENA
Rule 43    param_type -> GUION TYPE IGUAL FULL
Rule 44    param_delete -> GUION DELETE IGUAL FULL
Rule 45    param_add -> GUION ADD IGUAL ENTERO
Rule 46    param_name -> GUION NAME IGUAL CADENA
Rule 47    command_rmdisk -> RMDISK GUION PATH IGUAL CADENA
Rule 48    command_mount -> MOUNT parameters_mount
Rule 49    parameters_mount -> parameters_mount parameter_mount
Rule 50    parameters_mount -> parameter_mount
Rule 51    parameter_mount -> param_path
Rule 52    parameter_mount -> param_name
Rule 53    command_unmount -> UNMOUNT GUION ID_UNMOUNT IGUAL CADENA
Rule 54    command_mkfs -> MKFS parameters_mkfs
Rule 55    parameters_mkfs -> parameters_mkfs parameter_mkfs
Rule 56    parameters_mkfs -> parameter_mkfs
Rule 57    parameter_mkfs -> param_id
Rule 58    parameter_mkfs -> param_type
Rule 59    parameter_mkfs -> param_fs
Rule 60    param_id -> GUION ID_UNMOUNT IGUAL CADENA
Rule 61    param_fs -> GUION FS IGUAL FS_CADENA
Rule 62    command_login -> LOGIN parameters_login
Rule 63    parameters_login -> parameters_login parameter_login
Rule 64    parameters_login -> parameter_login
Rule 65    parameter_login -> param_user
Rule 66    parameter_login -> param_pass
Rule 67    parameter_login -> param_id
Rule 68    param_user -> GUION USER IGUAL CADENA
Rule 69    param_pass -> GUION PASS IGUAL CADENA
Rule 70    command_logout -> LOGOUT
Rule 71    command_mkgrp -> MKGRP GUION NAME IGUAL CADENA
Rule 72    command_rmgrp -> RMGRP GUION NAME IGUAL CADENA
Rule 73    command_mkusr -> MKUSR parameters_mkusr
Rule 74    parameters_mkusr -> parameters_mkusr parameter_mkusr
Rule 75    parameters_mkusr -> parameter_mkusr
Rule 76    parameter_mkusr -> param_user
Rule 77    parameter_mkusr -> param_pass
Rule 78    parameter_mkusr -> param_grp
Rule 79    param_grp -> GUION GRP IGUAL CADENA
Rule 80    command_rmusr -> RMUSR GUION USER IGUAL CADENA
Rule 81    command_mkfile -> MKFILE parameters_mkfile
Rule 82    parameters_mkfile -> parameters_mkfile parameter_mkfile
Rule 83    parameters_mkfile -> parameter_mkfile
Rule 84    parameter_mkfile -> param_path
Rule 85    parameter_mkfile -> param_r
Rule 86    parameter_mkfile -> param_size
Rule 87    parameter_mkfile -> param_cont
Rule 88    param_r -> GUION R
Rule 89    param_cont -> GUION CONT IGUAL CADENA
Rule 90    command_cat -> CAT parameters_cat
Rule 91    parameters_cat -> parameters_cat parameter_cat
Rule 92    parameters_cat -> parameter_cat
Rule 93    parameter_cat -> param_file
Rule 94    param_file -> GUION FILEN ENTERO IGUAL CADENA

Terminals, with rules where they appear

ADD                  : 45
CADENA               : 19 28 46 47 53 60 68 69 71 72 79 80 89 94
CAT                  : 90
CONT                 : 89
DELETE               : 44
ENTERO               : 27 45 94
EXECUTE              : 19
FDISK                : 31
FILEN                : 94
FIT                  : 30
FIT_CADENA           : 30
FS                   : 61
FS_CADENA            : 61
FULL                 : 43 44
GRP                  : 79
GUION                : 19 27 28 29 30 42 43 44 45 46 47 53 60 61 68 69 71 72 79 80 88 89 94
ID                   : 
ID_UNMOUNT           : 53 60
IGUAL                : 19 27 28 29 30 42 43 44 45 46 47 53 60 61 68 69 71 72 79 80 89 94
LOGIN                : 62
LOGOUT               : 70
MKDISK               : 20
MKFILE               : 81
MKFS                 : 54
MKGRP                : 71
MKUSR                : 73
MOUNT                : 48
NAME                 : 46 71 72
PASS                 : 69
PATH                 : 19 28 47
R                    : 88
RMDISK               : 47
RMGRP                : 72
RMUSR                : 80
SIZE                 : 27
TYPE                 : 42 43
TYPE_CADENA          : 42
UNIDAD_CADENA        : 29
UNIT                 : 29
UNMOUNT              : 53
USER                 : 68 80
error                : 

Nonterminals, with rules where they appear

command_cat          : 18
command_execute      : 4
command_fdisk        : 7
command_login        : 11
command_logout       : 12
command_mkdisk       : 5
command_mkfile       : 17
command_mkfs         : 10
command_mkgrp        : 13
command_mkusr        : 15
command_mount        : 8
command_rmdisk       : 6
command_rmgrp        : 14
command_rmusr        : 16
command_unmount      : 9
commands             : 2 3
init                 : 0
list_commands        : 1 2
param_add            : 41
param_cont           : 87
param_delete         : 39
param_file           : 93
param_fit            : 26 37
param_fs             : 59
param_grp            : 78
param_id             : 57 67
param_name           : 40 52
param_pass           : 66 77
param_path           : 24 35 51 84
param_r              : 85
param_size           : 23 34 86
param_type           : 38 58
param_unit           : 25 36
param_user           : 65 76
parameter_cat        : 91 92
parameter_fdisk      : 32 33
parameter_login      : 63 64
parameter_mkdisk     : 21 22
parameter_mkfile     : 82 83
parameter_mkfs       : 55 56
parameter_mkusr      : 74 75
parameter_mount      : 49 50
parameters_cat       : 90 91
parameters_fdisk     : 31 32
parameters_login     : 62 63
parameters_mkdisk    : 20 21
parameters_mkfile    : 81 82
parameters_mkfs      : 54 55
parameters_mkusr     : 73 74
parameters_mount     : 48 49

Parsing method: LALR

state 0

    (0) S' -> . init
    (1) init -> . list_commands
    (2) list_commands -> . list_commands commands
    (3) list_commands -> . commands
    (4) commands -> . command_execute
    (5) commands -> . command_mkdisk
    (6) commands -> . command_rmdisk
    (7) commands -> . command_fdisk
    (8) commands -> . command_mount
    (9) commands -> . command_unmount
    (10) commands -> . command_mkfs
    (11) commands -> . command_login
    (12) commands -> . command_logout
    (13) commands -> . command_mkgrp
    (14) commands -> . command_rmgrp
    (15) commands -> . command_mkusr
    (16) commands -> . command_rmusr
    (17) commands -> . command_mkfile
    (18) commands -> . command_cat
    (19) command_execute -> . EXECUTE GUION PATH IGUAL CADENA
    (20) command_mkdisk -> . MKDISK parameters_mkdisk
    (47) command_rmdisk -> . RMDISK GUION PATH IGUAL CADENA
    (31) command_fdisk -> . FDISK parameters_fdisk
    (48) command_mount -> . MOUNT parameters_mount
    (53) command_unmount -> . UNMOUNT GUION ID_UNMOUNT IGUAL CADENA
    (54) command_mkfs -> . MKFS parameters_mkfs
    (62) command_login -> . LOGIN parameters_login
    (70) command_logout -> . LOGOUT
    (71) command_mkgrp -> . MKGRP GUION NAME IGUAL CADENA
    (72) command_rmgrp -> . RMGRP GUION NAME IGUAL CADENA
    (73) command_mkusr -> . MKUSR parameters_mkusr
    (80) command_rmusr -> . RMUSR GUION USER IGUAL CADENA
    (81) command_mkfile -> . MKFILE parameters_mkfile
    (90) command_cat -> . CAT parameters_cat

    EXECUTE         shift and go to state 19
    MKDISK          shift and go to state 20
    RMDISK          shift and go to state 21
    FDISK           shift and go to state 22
    MOUNT           shift and go to state 23
    UNMOUNT         shift and go to state 24
    MKFS            shift and go to state 25
    LOGIN           shift and go to state 26
    LOGOUT          shift and go to state 27
    MKGRP           shift and go to state 28
    RMGRP           shift and go to state 29
    MKUSR           shift and go to state 30
    RMUSR           shift and go to state 31
    MKFILE          shift and go to state 32
    CAT             shift and go to state 33

    init                           shift and go to state 1
    list_commands                  shift and go to state 2
    commands                       shift and go to state 3
    command_execute                shift and go to state 4
    command_mkdisk                 shift and go to state 5
    command_rmdisk                 shift and go to state 6
    command_fdisk                  shift and go to state 7
    command_mount                  shift and go to state 8
    command_unmount                shift and go to state 9
    command_mkfs                   shift and go to state 10
    command_login                  shift and go to state 11
    command_logout                 shift and go to state 12
    command_mkgrp                  shift and go to state 13
    command_rmgrp                  shift and go to state 14
    command_mkusr                  shift and go to state 15
    command_rmusr                  shift and go to state 16
    command_mkfile                 shift and go to state 17
    command_cat                    shift and go to state 18

state 1

    (0) S' -> init .



state 2

    (1) init -> list_commands .
    (2) list_commands -> list_commands . commands
    (4) commands -> . command_execute
    (5) commands -> . command_mkdisk
    (6) commands -> . command_rmdisk
    (7) commands -> . command_fdisk
    (8) commands -> . command_mount
    (9) commands -> . command_unmount
    (10) commands -> . command_mkfs
    (11) commands -> . command_login
    (12) commands -> . command_logout
    (13) commands -> . command_mkgrp
    (14) commands -> . command_rmgrp
    (15) commands -> . command_mkusr
    (16) commands -> . command_rmusr
    (17) commands -> . command_mkfile
    (18) commands -> . command_cat
    (19) command_execute -> . EXECUTE GUION PATH IGUAL CADENA
    (20) command_mkdisk -> . MKDISK parameters_mkdisk
    (47) command_rmdisk -> . RMDISK GUION PATH IGUAL CADENA
    (31) command_fdisk -> . FDISK parameters_fdisk
    (48) command_mount -> . MOUNT parameters_mount
    (53) command_unmount -> . UNMOUNT GUION ID_UNMOUNT IGUAL CADENA
    (54) command_mkfs -> . MKFS parameters_mkfs
    (62) command_login -> . LOGIN parameters_login
    (70) command_logout -> . LOGOUT
    (71) command_mkgrp -> . MKGRP GUION NAME IGUAL CADENA
    (72) command_rmgrp -> . RMGRP GUION NAME IGUAL CADENA
    (73) command_mkusr -> . MKUSR parameters_mkusr
    (80) command_rmusr -> . RMUSR GUION USER IGUAL CADENA
    (81) command_mkfile -> . MKFILE parameters_mkfile
    (90) command_cat -> . CAT parameters_cat

    $end            reduce using rule 1 (init -> list_commands .)
    EXECUTE         shift and go to state 19
    MKDISK          shift and go to state 20
    RMDISK          shift and go to state 21
    FDISK           shift and go to state 22
    MOUNT           shift and go to state 23
    UNMOUNT         shift and go to state 24
    MKFS            shift and go to state 25
    LOGIN           shift and go to state 26
    LOGOUT          shift and go to state 27
    MKGRP           shift and go to state 28
    RMGRP           shift and go to state 29
    MKUSR           shift and go to state 30
    RMUSR           shift and go to state 31
    MKFILE          shift and go to state 32
    CAT             shift and go to state 33

    commands                       shift and go to state 34
    command_execute                shift and go to state 4
    command_mkdisk                 shift and go to state 5
    command_rmdisk                 shift and go to state 6
    command_fdisk                  shift and go to state 7
    command_mount                  shift and go to state 8
    command_unmount                shift and go to state 9
    command_mkfs                   shift and go to state 10
    command_login                  shift and go to state 11
    command_logout                 shift and go to state 12
    command_mkgrp                  shift and go to state 13
    command_rmgrp                  shift and go to state 14
    command_mkusr                  shift and go to state 15
    command_rmusr                  shift and go to state 16
    command_mkfile                 shift and go to state 17
    command_cat                    shift and go to state 18

state 3

    (3) list_commands -> commands .

    EXECUTE         reduce using rule 3 (list_commands -> commands .)
    MKDISK          reduce using rule 3 (list_commands -> commands .)
    RMDISK          reduce using rule 3 (list_commands -> commands .)
    FDISK           reduce using rule 3 (list_commands -> commands .)
    MOUNT           reduce using rule 3 (list_commands -> commands .)
    UNMOUNT         reduce using rule 3 (list_commands -> commands .)
    MKFS            reduce using rule 3 (list_commands -> commands .)
    LOGIN           reduce using rule 3 (list_commands -> commands .)
    LOGOUT          reduce using rule 3 (list_commands -> commands .)
    MKGRP           reduce using rule 3 (list_commands -> commands .)
    RMGRP           reduce using rule 3 (list_commands -> commands .)
    MKUSR           reduce using rule 3 (list_commands -> commands .)
    RMUSR           reduce using rule 3 (list_commands -> commands .)
    MKFILE          reduce using rule 3 (list_commands -> commands .)
    CAT             reduce using rule 3 (list_commands -> commands .)
    $end            reduce using rule 3 (list_commands -> commands .)


state 4

    (4) commands -> command_execute .

    EXECUTE         reduce using rule 4 (commands -> command_execute .)
    MKDISK          reduce using rule 4 (commands -> command_execute .)
    RMDISK          reduce using rule 4 (commands -> command_execute .)
    FDISK           reduce using rule 4 (commands -> command_execute .)
    MOUNT           reduce using rule 4 (commands -> command_execute .)
    UNMOUNT         reduce using rule 4 (commands -> command_execute .)
    MKFS            reduce using rule 4 (commands -> command_execute .)
    LOGIN           reduce using rule 4 (commands -> command_execute .)
    LOGOUT          reduce using rule 4 (commands -> command_execute .)
    MKGRP           reduce using rule 4 (commands -> command_execute .)
    RMGRP           reduce using rule 4 (commands -> command_execute .)
    MKUSR           reduce using rule 4 (commands -> command_execute .)
    RMUSR           reduce using rule 4 (commands -> command_execute .)
    MKFILE          reduce using rule 4 (commands -> command_execute .)
    CAT             reduce using rule 4 (commands -> command_execute .)
    $end            reduce using rule 4 (commands -> command_execute .)


state 5

    (5) commands -> command_mkdisk .

    EXECUTE         reduce using rule 5 (commands -> command_mkdisk .)
    MKDISK          reduce using rule 5 (commands -> command_mkdisk .)
    RMDISK          reduce using rule 5 (commands -> command_mkdisk .)
    FDISK           reduce using rule 5 (commands -> command_mkdisk .)
    MOUNT           reduce using rule 5 (commands -> command_mkdisk .)
    UNMOUNT         reduce using rule 5 (commands -> command_mkdisk .)
    MKFS            reduce using rule 5 (commands -> command_mkdisk .)
    LOGIN           reduce using rule 5 (commands -> command_mkdisk .)
    LOGOUT          reduce using rule 5 (commands -> command_mkdisk .)
    MKGRP           reduce using rule 5 (commands -> command_mkdisk .)
    RMGRP           reduce using rule 5 (commands -> command_mkdisk .)
    MKUSR           reduce using rule 5 (commands -> command_mkdisk .)
    RMUSR           reduce using rule 5 (commands -> command_mkdisk .)
    MKFILE          reduce using rule 5 (commands -> command_mkdisk .)
    CAT             reduce using rule 5 (commands -> command_mkdisk .)
    $end            reduce using rule 5 (commands -> command_mkdisk .)


state 6

    (6) commands -> command_rmdisk .

    EXECUTE         reduce using rule 6 (commands -> command_rmdisk .)
    MKDISK          reduce using rule 6 (commands -> command_rmdisk .)
    RMDISK          reduce using rule 6 (commands -> command_rmdisk .)
    FDISK           reduce using rule 6 (commands -> command_rmdisk .)
    MOUNT           reduce using rule 6 (commands -> command_rmdisk .)
    UNMOUNT         reduce using rule 6 (commands -> command_rmdisk .)
    MKFS            reduce using rule 6 (commands -> command_rmdisk .)
    LOGIN           reduce using rule 6 (commands -> command_rmdisk .)
    LOGOUT          reduce using rule 6 (commands -> command_rmdisk .)
    MKGRP           reduce using rule 6 (commands -> command_rmdisk .)
    RMGRP           reduce using rule 6 (commands -> command_rmdisk .)
    MKUSR           reduce using rule 6 (commands -> command_rmdisk .)
    RMUSR           reduce using rule 6 (commands -> command_rmdisk .)
    MKFILE          reduce using rule 6 (commands -> command_rmdisk .)
    CAT             reduce using rule 6 (commands -> command_rmdisk .)
    $end            reduce using rule 6 (commands -> command_rmdisk .)


state 7

    (7) commands -> command_fdisk .

    EXECUTE         reduce using rule 7 (commands -> command_fdisk .)
    MKDISK          reduce using rule 7 (commands -> command_fdisk .)
    RMDISK          reduce using rule 7 (commands -> command_fdisk .)
    FDISK           reduce using rule 7 (commands -> command_fdisk .)
    MOUNT           reduce using rule 7 (commands -> command_fdisk .)
    UNMOUNT         reduce using rule 7 (commands -> command_fdisk .)
    MKFS            reduce using rule 7 (commands -> command_fdisk .)
    LOGIN           reduce using rule 7 (commands -> command_fdisk .)
    LOGOUT          reduce using rule 7 (commands -> command_fdisk .)
    MKGRP           reduce using rule 7 (commands -> command_fdisk .)
    RMGRP           reduce using rule 7 (commands -> command_fdisk .)
    MKUSR           reduce using rule 7 (commands -> command_fdisk .)
    RMUSR           reduce using rule 7 (commands -> command_fdisk .)
    MKFILE          reduce using rule 7 (commands -> command_fdisk .)
    CAT             reduce using rule 7 (commands -> command_fdisk .)
    $end            reduce using rule 7 (commands -> command_fdisk .)


state 8

    (8) commands -> command_mount .

    EXECUTE         reduce using rule 8 (commands -> command_mount .)
    MKDISK          reduce using rule 8 (commands -> command_mount .)
    RMDISK          reduce using rule 8 (commands -> command_mount .)
    FDISK           reduce using rule 8 (commands -> command_mount .)
    MOUNT           reduce using rule 8 (commands -> command_mount .)
    UNMOUNT         reduce using rule 8 (commands -> command_mount .)
    MKFS            reduce using rule 8 (commands -> command_mount .)
    LOGIN           reduce using rule 8 (commands -> command_mount .)
    LOGOUT          reduce using rule 8 (commands -> command_mount .)
    MKGRP           reduce using rule 8 (commands -> command_mount .)
    RMGRP           reduce using rule 8 (commands -> command_mount .)
    MKUSR           reduce using rule 8 (commands -> command_mount .)
    RMUSR           reduce using rule 8 (commands -> command_mount .)
    MKFILE          reduce using rule 8 (commands -> command_mount .)
    CAT             reduce using rule 8 (commands -> command_mount .)
    $end            reduce using rule 8 (commands -> command_mount .)


state 9

    (9) commands -> command_unmount .

    EXECUTE         reduce using rule 9 (commands -> command_unmount .)
    MKDISK          reduce using rule 9 (commands -> command_unmount .)
    RMDISK          reduce using rule 9 (commands -> command_unmount .)
    FDISK           reduce using rule 9 (commands -> command_unmount .)
    MOUNT           reduce using rule 9 (commands -> command_unmount .)
    UNMOUNT         reduce using rule 9 (commands -> command_unmount .)
    MKFS            reduce using rule 9 (commands -> command_unmount .)
    LOGIN           reduce using rule 9 (commands -> command_unmount .)
    LOGOUT          reduce using rule 9 (commands -> command_unmount .)
    MKGRP           reduce using rule 9 (commands -> command_unmount .)
    RMGRP           reduce using rule 9 (commands -> command_unmount .)
    MKUSR           reduce using rule 9 (commands -> command_unmount .)
    RMUSR           reduce using rule 9 (commands -> command_unmount .)
    MKFILE          reduce using rule 9 (commands -> command_unmount .)
    CAT             reduce using rule 9 (commands -> command_unmount .)
    $end            reduce using rule 9 (commands -> command_unmount .)


state 10

    (10) commands -> command_mkfs .

    EXECUTE         reduce using rule 10 (commands -> command_mkfs .)
    MKDISK          reduce using rule 10 (commands -> command_mkfs .)
    RMDISK          reduce using rule 10 (commands -> command_mkfs .)
    FDISK           reduce using rule 10 (commands -> command_mkfs .)
    MOUNT           reduce using rule 10 (commands -> command_mkfs .)
    UNMOUNT         reduce using rule 10 (commands -> command_mkfs .)
    MKFS            reduce using rule 10 (commands -> command_mkfs .)
    LOGIN           reduce using rule 10 (commands -> command_mkfs .)
    LOGOUT          reduce using rule 10 (commands -> command_mkfs .)
    MKGRP           reduce using rule 10 (commands -> command_mkfs .)
    RMGRP           reduce using rule 10 (commands -> command_mkfs .)
    MKUSR           reduce using rule 10 (commands -> command_mkfs .)
    RMUSR           reduce using rule 10 (commands -> command_mkfs .)
    MKFILE          reduce using rule 10 (commands -> command_mkfs .)
    CAT             reduce using rule 10 (commands -> command_mkfs .)
    $end            reduce using rule 10 (commands -> command_mkfs .)


state 11

    (11) commands -> command_login .

    EXECUTE         reduce using rule 11 (commands -> command_login .)
    MKDISK          reduce using rule 11 (commands -> command_login .)
    RMDISK          reduce using rule 11 (commands -> command_login .)
    FDISK           reduce using rule 11 (commands -> command_login .)
    MOUNT           reduce using rule 11 (commands -> command_login .)
    UNMOUNT         reduce using rule 11 (commands -> command_login .)
    MKFS            reduce using rule 11 (commands -> command_login .)
    LOGIN           reduce using rule 11 (commands -> command_login .)
    LOGOUT          reduce using rule 11 (commands -> command_login .)
    MKGRP           reduce using rule 11 (commands -> command_login .)
    RMGRP           reduce using rule 11 (commands -> command_login .)
    MKUSR           reduce using rule 11 (commands -> command_login .)
    RMUSR           reduce using rule 11 (commands -> command_login .)
    MKFILE          reduce using rule 11 (commands -> command_login .)
    CAT             reduce using rule 11 (commands -> command_login .)
    $end            reduce using rule 11 (commands -> command_login .)

